--- a/01a-create_classifiers_featureagglomeration.ipynb
+++ b/01a-create_classifiers_featureagglomeration.ipynb
@@ -127,7 +127,7 @@
     "else:\n",
     "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
     "\n",
-    "output_dir = \"outputs\""
+    "output_dir = \"outputs_feature_agglomeration\""
    ]
   },
   {
@@ -292,11 +292,11 @@
     "    downsample_unlabelled,\n",
     ")\n",
     "\n",
-    "# Suppress FutureWarning for some versions of Scikit-learn\n",
-    "%env PYTHONWARNINGS=ignore::FutureWarning\n",
+    "# Suppress FutureWarning for some versions of pandas\n",
+    "pd.set_option('future.no_silent_downcasting', True)\n",
     "\n",
-    "warnings.simplefilter(\"ignore\", FutureWarning)\n",
-    "warnings.simplefilter(\"ignore\", ConvergenceWarning)"
+    "# Suppress FutureWarning for some versions of Scikit-learn\n",
+    "%env PYTHONWARNINGS=ignore"
    ]
   },
   {
@@ -804,7 +804,7 @@
     "# Wrangle the training data to the required format\n",
     "train_pu = cleaned[cleaned[\"label\"].isin({\"positive\", \"unlabelled\"})]\n",
     "x_pu = train_pu.drop(columns=\"label\")\n",
-    "y_pu = train_pu[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0})\n",
+    "y_pu = train_pu[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0}).astype(\"int\")\n",
     "\n",
     "if overwrite or not os.path.isfile(pu_cv_basename + \".joblib\"):\n",
     "    pu_model = BaggingPuClassifier(\n",
@@ -895,26 +895,18 @@
     "# Plot the results of the cross-validation performed\n",
     "# in the previous cell\n",
     "\n",
-    "df_pu_search = pd.concat(\n",
-    "    (\n",
-    "        pd.DataFrame(pu_search.cv_results_[\"params\"]),\n",
-    "        pd.DataFrame(\n",
-    "            {\n",
-    "                key: pu_search.cv_results_[key]\n",
-    "                for key in (\n",
-    "                    \"mean_test_score\",\n",
-    "                    \"std_test_score\",\n",
-    "                )\n",
-    "            }\n",
-    "        )\n",
-    "    ),\n",
-    "    axis=\"columns\",\n",
+    "df_pu_search = pd.DataFrame(\n",
+    "    {\n",
+    "        key: value for key, value in pu_search.cv_results_.items()\n",
+    "        if key.startswith(\"split\") and key.endswith(\"_test_score\")\n",
+    "    }\n",
     ")\n",
+    "df_pu_search.index = pu_search.cv_results_[\"param_featureagglomeration__n_clusters\"]\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "l = ax.plot(\n",
-    "    \"featureagglomeration__n_clusters\",\n",
-    "    \"mean_test_score\",\n",
-    "    data=df_pu_search,\n",
+    "    df_pu_search.index,\n",
+    "    df_pu_search.mean(axis=1),\n",
     "    label=None,\n",
     ")[0]\n",
     "l.set_label(None)\n",
@@ -1335,7 +1327,7 @@
     "    subset = subset[subset[\"label\"].isin({\"positive\", \"unlabelled\"})]\n",
     "    print(subset.groupby(\"label\").size())\n",
     "    x_pu_subset = subset.drop(columns=\"label\")\n",
-    "    y_pu_subset = subset[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0})\n",
+    "    y_pu_subset = subset[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0}).astype(\"int\")\n",
     "\n",
     "    pu_search_subset = clone(pu_search)\n",
     "    t0 = time.time()\n",
@@ -1405,25 +1397,16 @@
     "fig, axs = plt.subplots(2, 2, figsize=(10, 8), gridspec_kw={\"hspace\": 0.3}, sharey=True)\n",
     "for ax, (region, pu_search_subset) in zip(np.ravel(axs), pu_search_regions.items()):\n",
     "    pu_axes[region] = ax\n",
-    "    df_pu_subset = pd.concat(\n",
-    "        (\n",
-    "            pd.DataFrame(pu_search_subset.cv_results_[\"params\"]),\n",
-    "            pd.DataFrame(\n",
-    "                {\n",
-    "                    key: pu_search_subset.cv_results_[key]\n",
-    "                    for key in (\n",
-    "                        \"mean_test_score\",\n",
-    "                        \"std_test_score\",\n",
-    "                    )\n",
-    "                }\n",
-    "            )\n",
-    "        ),\n",
-    "        axis=\"columns\",\n",
+    "    df_pu_subset = pd.DataFrame(\n",
+    "        {\n",
+    "            key: value for key, value in pu_search_subset.cv_results_.items()\n",
+    "            if key.startswith(\"split\") and key.endswith(\"_test_score\")\n",
+    "        }\n",
     "    )\n",
+    "    df_pu_subset.index = pu_search_subset.cv_results_[\"param_featureagglomeration__n_clusters\"]\n",
     "    l = ax.plot(\n",
-    "        \"featureagglomeration__n_clusters\",\n",
-    "        \"mean_test_score\",\n",
-    "        data=df_pu_subset,\n",
+    "        df_pu_subset.index,\n",
+    "        df_pu_subset.mean(axis=1),\n",
     "    )[0]\n",
     "    l.set_label(None)\n",
     "\n",
@@ -1514,7 +1497,7 @@
     "        )\n",
     "        subset = subset[subset[\"label\"].isin({\"positive\", \"unlabelled\"})]\n",
     "        x_pu_subset = subset.drop(columns=\"label\")\n",
-    "        y_pu_subset = subset[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0})\n",
+    "        y_pu_subset = subset[\"label\"].replace({\"positive\": 1, \"unlabelled\": 0}).astype(\"int\")\n",
     "        subset_best.fit(x_pu_subset, y_pu_subset)\n",
     "        pu_best_regions[region] = subset_best\n",
     "        joblib.dump(subset_best, output_subset, compress=True)\n",
@@ -1959,7 +1942,7 @@
     "# Wrangle training data\n",
     "train_svm = cleaned[cleaned[\"label\"].isin({\"positive\", \"negative\"})]\n",
     "x_svm = train_svm.drop(columns=\"label\")\n",
-    "y_svm = train_svm[\"label\"].replace({\"positive\": 1, \"negative\": 0})\n",
+    "y_svm = train_svm[\"label\"].replace({\"positive\": 1, \"negative\": 0}).astype(\"int\")\n",
     "\n",
     "if overwrite or not os.path.isfile(svm_cv_basename + \".joblib\"):\n",
     "    svm_model = SVC(**svm_params)\n",
@@ -2026,26 +2009,17 @@
     }
    ],
    "source": [
-    "df_svm_search = pd.concat(\n",
-    "    (\n",
-    "        pd.DataFrame(svm_search.cv_results_[\"params\"]),\n",
-    "        pd.DataFrame(\n",
-    "            {\n",
-    "                key: svm_search.cv_results_[key]\n",
-    "                for key in (\n",
-    "                    \"mean_test_score\",\n",
-    "                    \"std_test_score\",\n",
-    "                )\n",
-    "            }\n",
-    "        )\n",
-    "    ),\n",
-    "    axis=\"columns\",\n",
+    "df_svm_search = pd.DataFrame(\n",
+    "    {\n",
+    "        key: value for key, value in svm_search.cv_results_.items()\n",
+    "        if key.startswith(\"split\") and key.endswith(\"_test_score\")\n",
+    "    }\n",
     ")\n",
+    "df_svm_search.index = svm_search.cv_results_[\"param_featureagglomeration__n_clusters\"]\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(\n",
-    "    \"featureagglomeration__n_clusters\",\n",
-    "    \"mean_test_score\",\n",
-    "    data=df_svm_search,\n",
+    "    df_svm_search.index,\n",
+    "    df_svm_search.mean(axis=1),\n",
     ")\n",
     "ax.grid(\n",
     "    linestyle=\"dashed\",\n",
@@ -2422,7 +2396,7 @@
     "    subset = subset[subset[\"label\"].isin({\"positive\", \"negative\"})]\n",
     "    print(subset.groupby(\"label\").size())\n",
     "    x_svm_subset = subset[cleaned.columns].drop(columns=\"label\")\n",
-    "    y_svm_subset = subset[\"label\"].replace({\"positive\": 1, \"negative\": 0})\n",
+    "    y_svm_subset = subset[\"label\"].replace({\"positive\": 1, \"negative\": 0}).astype(\"int\")\n",
     "\n",
     "    svm_search_subset = clone(svm_search)\n",
     "    t0 = time.time()\n",
@@ -2475,25 +2449,16 @@
     "fig, axs = plt.subplots(2, 1, figsize=(10, 8), gridspec_kw={\"hspace\": 0.3}, squeeze=False)\n",
     "for ax, (region, svm_search_subset) in zip(np.ravel(axs), svm_search_regions.items()):\n",
     "    svm_axes[region] = ax\n",
-    "    df_svm_subset = pd.concat(\n",
-    "        (\n",
-    "            pd.DataFrame(svm_search_subset.cv_results_[\"params\"]),\n",
-    "            pd.DataFrame(\n",
-    "                {\n",
-    "                    key: svm_search_subset.cv_results_[key]\n",
-    "                    for key in (\n",
-    "                        \"mean_test_score\",\n",
-    "                        \"std_test_score\",\n",
-    "                    )\n",
-    "                }\n",
-    "            )\n",
-    "        ),\n",
-    "        axis=\"columns\",\n",
+    "    df_svm_subset = pd.DataFrame(\n",
+    "        {\n",
+    "            key: value for key, value in svm_search_subset.cv_results_.items()\n",
+    "            if key.startswith(\"split\") and key.endswith(\"_test_score\")\n",
+    "        }\n",
     "    )\n",
+    "    df_svm_subset.index = svm_search_subset.cv_results_[\"param_featureagglomeration__n_clusters\"]\n",
     "    l = ax.plot(\n",
-    "        \"featureagglomeration__n_clusters\",\n",
-    "        \"mean_test_score\",\n",
-    "        data=df_svm_subset,\n",
+    "        df_svm_subset.index,\n",
+    "        df_svm_subset.mean(axis=1),\n",
     "    )[0]\n",
     "    l.set_label(None)\n",
     "\n",
@@ -2582,7 +2547,7 @@
     "        )\n",
     "        subset = subset[subset[\"label\"].isin({\"positive\", \"negative\"})]\n",
     "        x_svm_subset = subset.drop(columns=\"label\")\n",
-    "        y_svm_subset = subset[\"label\"].replace({\"positive\": 1, \"negative\": 0})\n",
+    "        y_svm_subset = subset[\"label\"].replace({\"positive\": 1, \"negative\": 0}).astype(\"int\")\n",
     "        subset_best.fit(x_svm_subset, y_svm_subset)\n",
     "        svm_best_regions[region] = subset_best\n",
     "        joblib.dump(subset_best, output_subset, compress=True)\n",
