--- a/02a-create_probability_maps_global_featureagglomeration.ipynb
+++ b/02a-create_probability_maps_global_featureagglomeration.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.005388,
-     "end_time": "2024-06-20T13:11:42.410136",
+     "duration": 0.00703,
+     "end_time": "2024-07-05T04:58:14.277311",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.404748",
+     "start_time": "2024-07-05T04:58:14.270281",
      "status": "completed"
     },
     "tags": []
@@ -17,7 +17,7 @@
    "source": [
     "# Probability grids\n",
     "\n",
-    "This notebook creates the time-dependent probability maps and writes them to file (`.nc` format), using the models trained in the previous notebook (`01a-create_classifiers_global.ipynb`). This notebook must have been run previously."
+    "This notebook creates the time-dependent probability maps and writes them to file (`.nc` format), using the models trained in the previous notebook (`01a-create_classifiers_featureagglomeration.ipynb`). This notebook must have been run previously."
    ]
   },
   {
@@ -25,10 +25,10 @@
    "id": "36e80d65",
    "metadata": {
     "papermill": {
-     "duration": 0.003109,
-     "end_time": "2024-06-20T13:11:42.416704",
+     "duration": 0.006409,
+     "end_time": "2024-07-05T04:58:14.303578",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.413595",
+     "start_time": "2024-07-05T04:58:14.297169",
      "status": "completed"
     },
     "tags": []
@@ -45,16 +45,16 @@
    "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:42.425879Z",
-     "iopub.status.busy": "2024-06-20T13:11:42.425569Z",
-     "iopub.status.idle": "2024-06-20T13:11:42.432684Z",
-     "shell.execute_reply": "2024-06-20T13:11:42.432001Z"
+     "iopub.execute_input": "2024-07-05T04:58:14.315320Z",
+     "iopub.status.busy": "2024-07-05T04:58:14.314817Z",
+     "iopub.status.idle": "2024-07-05T04:58:14.325132Z",
+     "shell.execute_reply": "2024-07-05T04:58:14.323909Z"
     },
     "papermill": {
-     "duration": 0.01386,
-     "end_time": "2024-06-20T13:11:42.434437",
+     "duration": 0.018675,
+     "end_time": "2024-07-05T04:58:14.327267",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.420577",
+     "start_time": "2024-07-05T04:58:14.308592",
      "status": "completed"
     },
     "tags": []
@@ -80,10 +80,10 @@
    "id": "6bcc106f",
    "metadata": {
     "papermill": {
-     "duration": 0.002556,
-     "end_time": "2024-06-20T13:11:42.440189",
+     "duration": 0.003413,
+     "end_time": "2024-07-05T04:58:14.334000",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.437633",
+     "start_time": "2024-07-05T04:58:14.330587",
      "status": "completed"
     },
     "tags": []
@@ -98,16 +98,16 @@
    "id": "40a511d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:42.446262Z",
-     "iopub.status.busy": "2024-06-20T13:11:42.446016Z",
-     "iopub.status.idle": "2024-06-20T13:11:42.499967Z",
-     "shell.execute_reply": "2024-06-20T13:11:42.499393Z"
+     "iopub.execute_input": "2024-07-05T04:58:14.341197Z",
+     "iopub.status.busy": "2024-07-05T04:58:14.340763Z",
+     "iopub.status.idle": "2024-07-05T04:58:14.417532Z",
+     "shell.execute_reply": "2024-07-05T04:58:14.416933Z"
     },
     "papermill": {
-     "duration": 0.0588,
-     "end_time": "2024-06-20T13:11:42.501513",
+     "duration": 0.083293,
+     "end_time": "2024-07-05T04:58:14.419918",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.442713",
+     "start_time": "2024-07-05T04:58:14.336625",
      "status": "completed"
     },
     "tags": []
@@ -123,7 +123,7 @@
     "else:\n",
     "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
     "\n",
-    "output_dir = \"outputs\""
+    "output_dir = \"outputs_feature_agglomeration\""
    ]
   },
   {
@@ -131,10 +131,10 @@
    "id": "2efa9d67",
    "metadata": {
     "papermill": {
-     "duration": 0.002663,
-     "end_time": "2024-06-20T13:11:42.507362",
+     "duration": 0.003018,
+     "end_time": "2024-07-05T04:58:14.426259",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.504699",
+     "start_time": "2024-07-05T04:58:14.423241",
      "status": "completed"
     },
     "tags": []
@@ -149,16 +149,16 @@
    "id": "f2d69c31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:42.512658Z",
-     "iopub.status.busy": "2024-06-20T13:11:42.512384Z",
-     "iopub.status.idle": "2024-06-20T13:11:42.516237Z",
-     "shell.execute_reply": "2024-06-20T13:11:42.515803Z"
+     "iopub.execute_input": "2024-07-05T04:58:14.437192Z",
+     "iopub.status.busy": "2024-07-05T04:58:14.436825Z",
+     "iopub.status.idle": "2024-07-05T04:58:14.442302Z",
+     "shell.execute_reply": "2024-07-05T04:58:14.441432Z"
     },
     "papermill": {
-     "duration": 0.008043,
-     "end_time": "2024-06-20T13:11:42.517722",
+     "duration": 0.013355,
+     "end_time": "2024-07-05T04:58:14.444493",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.509679",
+     "start_time": "2024-07-05T04:58:14.431138",
      "status": "completed"
     },
     "tags": []
@@ -176,10 +176,10 @@
    "id": "544fcfcf",
    "metadata": {
     "papermill": {
-     "duration": 0.00199,
-     "end_time": "2024-06-20T13:11:42.521956",
+     "duration": 0.003995,
+     "end_time": "2024-07-05T04:58:14.451661",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.519966",
+     "start_time": "2024-07-05T04:58:14.447666",
      "status": "completed"
     },
     "tags": []
@@ -195,10 +195,10 @@
    "id": "dca6800a",
    "metadata": {
     "papermill": {
-     "duration": 0.003125,
-     "end_time": "2024-06-20T13:11:42.527035",
+     "duration": 0.00309,
+     "end_time": "2024-07-05T04:58:14.458744",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.523910",
+     "start_time": "2024-07-05T04:58:14.455654",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:42.532676Z",
-     "iopub.status.busy": "2024-06-20T13:11:42.532375Z",
-     "iopub.status.idle": "2024-06-20T13:11:46.516065Z",
-     "shell.execute_reply": "2024-06-20T13:11:46.515469Z"
+     "iopub.execute_input": "2024-07-05T04:58:14.467363Z",
+     "iopub.status.busy": "2024-07-05T04:58:14.466964Z",
+     "iopub.status.idle": "2024-07-05T04:58:18.929997Z",
+     "shell.execute_reply": "2024-07-05T04:58:18.929408Z"
     },
     "papermill": {
-     "duration": 3.988367,
-     "end_time": "2024-06-20T13:11:46.517604",
+     "duration": 4.468852,
+     "end_time": "2024-07-05T04:58:18.931765",
      "exception": false,
-     "start_time": "2024-06-20T13:11:42.529237",
+     "start_time": "2024-07-05T04:58:14.462913",
      "status": "completed"
     },
     "tags": []
@@ -245,10 +245,10 @@
    "id": "ae9cc890",
    "metadata": {
     "papermill": {
-     "duration": 0.00326,
-     "end_time": "2024-06-20T13:11:46.523156",
+     "duration": 0.002557,
+     "end_time": "2024-07-05T04:58:18.937210",
      "exception": false,
-     "start_time": "2024-06-20T13:11:46.519896",
+     "start_time": "2024-07-05T04:58:18.934653",
      "status": "completed"
     },
     "tags": []
@@ -263,16 +263,16 @@
    "id": "7342050e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:46.532021Z",
-     "iopub.status.busy": "2024-06-20T13:11:46.531524Z",
-     "iopub.status.idle": "2024-06-20T13:11:46.538064Z",
-     "shell.execute_reply": "2024-06-20T13:11:46.537563Z"
+     "iopub.execute_input": "2024-07-05T04:58:18.943696Z",
+     "iopub.status.busy": "2024-07-05T04:58:18.943243Z",
+     "iopub.status.idle": "2024-07-05T04:58:18.949628Z",
+     "shell.execute_reply": "2024-07-05T04:58:18.949166Z"
     },
     "papermill": {
-     "duration": 0.012046,
-     "end_time": "2024-06-20T13:11:46.539644",
+     "duration": 0.011514,
+     "end_time": "2024-07-05T04:58:18.951249",
      "exception": false,
-     "start_time": "2024-06-20T13:11:46.527598",
+     "start_time": "2024-07-05T04:58:18.939735",
      "status": "completed"
     },
     "tags": []
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x17ec54050>"
+       "<dask.config.set at 0x178899b90>"
       ]
      },
      "execution_count": 5,
@@ -299,10 +299,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002632,
-     "end_time": "2024-06-20T13:11:46.545326",
+     "duration": 0.002699,
+     "end_time": "2024-07-05T04:58:18.956919",
      "exception": false,
-     "start_time": "2024-06-20T13:11:46.542694",
+     "start_time": "2024-07-05T04:58:18.954220",
      "status": "completed"
     },
     "tags": []
@@ -317,16 +317,16 @@
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:46.552971Z",
-     "iopub.status.busy": "2024-06-20T13:11:46.552723Z",
-     "iopub.status.idle": "2024-06-20T13:11:51.656725Z",
-     "shell.execute_reply": "2024-06-20T13:11:51.656029Z"
+     "iopub.execute_input": "2024-07-05T04:58:18.963331Z",
+     "iopub.status.busy": "2024-07-05T04:58:18.963090Z",
+     "iopub.status.idle": "2024-07-05T04:58:25.333781Z",
+     "shell.execute_reply": "2024-07-05T04:58:25.333202Z"
     },
     "papermill": {
-     "duration": 5.109225,
-     "end_time": "2024-06-20T13:11:51.658350",
+     "duration": 6.376123,
+     "end_time": "2024-07-05T04:58:25.335685",
      "exception": false,
-     "start_time": "2024-06-20T13:11:46.549125",
+     "start_time": "2024-07-05T04:58:18.959562",
      "status": "completed"
     },
     "tags": []
@@ -337,7 +337,7 @@
     "training_filename = os.path.join(data_dir, \"training_data_global.csv\")\n",
     "\n",
     "point_data = dd.read_csv(data_filename)\n",
-    "df_out = point_data[[\"lon\", \"lat\", \"present_lon\", \"present_lat\", \"age (Ma)\"]].compute()\n",
+    "df_out = point_data[[\"lon\", \"lat\", \"present_lon\", \"present_lat\", \"age (Ma)\", \"region\"]].compute()\n",
     "regions = list(dd.read_csv(training_filename)[\"region\"].unique())\n",
     "\n",
     "output_dir = os.path.join(output_dir, \"global\")"
@@ -349,10 +349,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.002594,
-     "end_time": "2024-06-20T13:11:51.663886",
+     "duration": 0.00354,
+     "end_time": "2024-07-05T04:58:25.342827",
      "exception": false,
-     "start_time": "2024-06-20T13:11:51.661292",
+     "start_time": "2024-07-05T04:58:25.339287",
      "status": "completed"
     },
     "tags": []
@@ -369,16 +369,16 @@
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:11:51.672501Z",
-     "iopub.status.busy": "2024-06-20T13:11:51.672225Z",
-     "iopub.status.idle": "2024-06-20T13:28:57.190265Z",
-     "shell.execute_reply": "2024-06-20T13:28:57.189684Z"
+     "iopub.execute_input": "2024-07-05T04:58:25.350506Z",
+     "iopub.status.busy": "2024-07-05T04:58:25.350171Z",
+     "iopub.status.idle": "2024-07-05T05:18:37.296347Z",
+     "shell.execute_reply": "2024-07-05T05:18:37.295760Z"
     },
     "papermill": {
-     "duration": 1025.527601,
-     "end_time": "2024-06-20T13:28:57.193992",
+     "duration": 1211.954249,
+     "end_time": "2024-07-05T05:18:37.300327",
      "exception": false,
-     "start_time": "2024-06-20T13:11:51.666391",
+     "start_time": "2024-07-05T04:58:25.346078",
      "status": "completed"
     },
     "tags": []
@@ -388,56 +388,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: global; duration: 0:02:32.916897)\n"
+      "Calculating probabilities for PU model complete (region: global; duration: 0:03:08.669551)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:20.352261)\n"
+      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:52.470479)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: South America; duration: 0:02:26.709014)\n"
+      "Calculating probabilities for PU model complete (region: South America; duration: 0:02:48.784047)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:02:26.215107)\n"
+      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:02:52.316250)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:02:23.249408)\n"
+      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:02:46.209209)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:40.374387)\n"
+      "Calculating probabilities for SVM model complete (region: global; duration: 0:02:01.187847)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:34.602675)\n"
+      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:42.207199)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:41.087536)\n"
+      "Calculating probabilities for SVM model complete (region: South America; duration: 0:02:00.090150)\n"
      ]
     }
    ],
@@ -519,10 +519,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.002924,
-     "end_time": "2024-06-20T13:28:57.199964",
+     "duration": 0.002942,
+     "end_time": "2024-07-05T05:18:37.306652",
      "exception": false,
-     "start_time": "2024-06-20T13:28:57.197040",
+     "start_time": "2024-07-05T05:18:37.303710",
      "status": "completed"
     },
     "tags": []
@@ -539,16 +539,16 @@
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T13:28:57.206635Z",
-     "iopub.status.busy": "2024-06-20T13:28:57.206397Z",
-     "iopub.status.idle": "2024-06-20T15:18:02.328326Z",
-     "shell.execute_reply": "2024-06-20T15:18:02.327831Z"
+     "iopub.execute_input": "2024-07-05T05:18:37.314254Z",
+     "iopub.status.busy": "2024-07-05T05:18:37.313999Z",
+     "iopub.status.idle": "2024-07-05T06:51:50.350099Z",
+     "shell.execute_reply": "2024-07-05T06:51:50.349421Z"
     },
     "papermill": {
-     "duration": 6545.129384,
-     "end_time": "2024-06-20T15:18:02.332225",
+     "duration": 5593.045553,
+     "end_time": "2024-07-05T06:51:50.355606",
      "exception": false,
-     "start_time": "2024-06-20T13:28:57.202841",
+     "start_time": "2024-07-05T05:18:37.310053",
      "status": "completed"
     },
     "tags": []
@@ -558,56 +558,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: global; duration: 0:13:51.905821)\n"
+      "Creating grids for PU model complete (region: global; duration: 0:11:46.670145)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: North America; duration: 0:13:37.224705)\n"
+      "Creating grids for PU model complete (region: North America; duration: 0:11:50.172224)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: South America; duration: 0:13:32.963336)\n"
+      "Creating grids for PU model complete (region: South America; duration: 0:09:59.452092)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:36.328199)\n"
+      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:11:35.283714)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Tethys; duration: 0:13:40.561762)\n"
+      "Creating grids for PU model complete (region: Tethys; duration: 0:11:52.082890)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: global; duration: 0:13:30.629772)\n"
+      "Creating grids for SVM model complete (region: global; duration: 0:13:07.234972)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: North America; duration: 0:13:28.987141)\n"
+      "Creating grids for SVM model complete (region: North America; duration: 0:12:26.075421)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: South America; duration: 0:13:46.512445)\n"
+      "Creating grids for SVM model complete (region: South America; duration: 0:10:36.053564)\n"
      ]
     }
    ],
@@ -676,10 +676,10 @@
    "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.003097,
-     "end_time": "2024-06-20T15:18:02.338624",
+     "duration": 0.003263,
+     "end_time": "2024-07-05T06:51:50.362363",
      "exception": false,
-     "start_time": "2024-06-20T15:18:02.335527",
+     "start_time": "2024-07-05T06:51:50.359100",
      "status": "completed"
     },
     "tags": []
@@ -704,18 +704,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7583.427016,
-   "end_time": "2024-06-20T15:18:05.166996",
+   "duration": 6820.070167,
+   "end_time": "2024-07-05T06:51:53.287509",
    "environment_variables": {},
    "exception": null,
    "input_path": "02a-create_probability_maps_global.ipynb",
-   "output_path": "02a-create_probability_maps_global.ipynb",
+   "output_path": "02a-create_probability_maps_global_output.ipynb",
    "parameters": {},
-   "start_time": "2024-06-20T13:11:41.739980",
+   "start_time": "2024-07-05T04:58:13.217342",
    "version": "2.4.0"
   }
  },
