--- a/05a-create_preservation_maps_featureagglomeration.ipynb
+++ b/05a-create_preservation_maps_featureagglomeration.ipynb
@@ -5,10 +5,10 @@
    "id": "7f6878b3",
    "metadata": {
     "papermill": {
-     "duration": 0.005131,
-     "end_time": "2024-07-30T15:39:31.509589",
+     "duration": 0.005423,
+     "end_time": "2024-07-08T02:55:43.928778",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.504458",
+     "start_time": "2024-07-08T02:55:43.923355",
      "status": "completed"
     },
     "tags": []
@@ -26,10 +26,10 @@
    "id": "bb19728e",
    "metadata": {
     "papermill": {
-     "duration": 0.003242,
-     "end_time": "2024-07-30T15:39:31.516320",
+     "duration": 0.002928,
+     "end_time": "2024-07-08T02:55:43.935110",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.513078",
+     "start_time": "2024-07-08T02:55:43.932182",
      "status": "completed"
     },
     "tags": []
@@ -46,16 +46,16 @@
    "id": "5575cb58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:31.523674Z",
-     "iopub.status.busy": "2024-07-30T15:39:31.523369Z",
-     "iopub.status.idle": "2024-07-30T15:39:31.531210Z",
-     "shell.execute_reply": "2024-07-30T15:39:31.530378Z"
+     "iopub.execute_input": "2024-07-08T02:55:43.941298Z",
+     "iopub.status.busy": "2024-07-08T02:55:43.941030Z",
+     "iopub.status.idle": "2024-07-08T02:55:43.948070Z",
+     "shell.execute_reply": "2024-07-08T02:55:43.947476Z"
     },
     "papermill": {
-     "duration": 0.013915,
-     "end_time": "2024-07-30T15:39:31.533220",
+     "duration": 0.011994,
+     "end_time": "2024-07-08T02:55:43.949618",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.519305",
+     "start_time": "2024-07-08T02:55:43.937624",
      "status": "completed"
     },
     "tags": []
@@ -78,10 +78,10 @@
    "id": "e027d1c4",
    "metadata": {
     "papermill": {
-     "duration": 0.002648,
-     "end_time": "2024-07-30T15:39:31.538904",
+     "duration": 0.002527,
+     "end_time": "2024-07-08T02:55:43.954751",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.536256",
+     "start_time": "2024-07-08T02:55:43.952224",
      "status": "completed"
     },
     "tags": []
@@ -96,16 +96,16 @@
    "id": "790680ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:31.545209Z",
-     "iopub.status.busy": "2024-07-30T15:39:31.544971Z",
-     "iopub.status.idle": "2024-07-30T15:39:31.597929Z",
-     "shell.execute_reply": "2024-07-30T15:39:31.597316Z"
+     "iopub.execute_input": "2024-07-08T02:55:43.960923Z",
+     "iopub.status.busy": "2024-07-08T02:55:43.960687Z",
+     "iopub.status.idle": "2024-07-08T02:55:44.022021Z",
+     "shell.execute_reply": "2024-07-08T02:55:44.021471Z"
     },
     "papermill": {
-     "duration": 0.057986,
-     "end_time": "2024-07-30T15:39:31.599417",
+     "duration": 0.066667,
+     "end_time": "2024-07-08T02:55:44.023858",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.541431",
+     "start_time": "2024-07-08T02:55:43.957191",
      "status": "completed"
     },
     "tags": []
@@ -119,7 +119,7 @@
     "else:\n",
     "    data_dir = check_prepared_data(\"prepared_data\")\n",
     "\n",
-    "outputs_dir = \"outputs\""
+    "outputs_dir = \"outputs_feature_agglomeration\""
    ]
   },
   {
@@ -127,10 +127,10 @@
    "id": "adb0c6c1",
    "metadata": {
     "papermill": {
-     "duration": 0.001998,
-     "end_time": "2024-07-30T15:39:31.603663",
+     "duration": 0.002615,
+     "end_time": "2024-07-08T02:55:44.029137",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.601665",
+     "start_time": "2024-07-08T02:55:44.026522",
      "status": "completed"
     },
     "tags": []
@@ -145,16 +145,16 @@
    "id": "af58fc81",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:31.609255Z",
-     "iopub.status.busy": "2024-07-30T15:39:31.609035Z",
-     "iopub.status.idle": "2024-07-30T15:39:31.612333Z",
-     "shell.execute_reply": "2024-07-30T15:39:31.611819Z"
+     "iopub.execute_input": "2024-07-08T02:55:44.035040Z",
+     "iopub.status.busy": "2024-07-08T02:55:44.034802Z",
+     "iopub.status.idle": "2024-07-08T02:55:44.037862Z",
+     "shell.execute_reply": "2024-07-08T02:55:44.037378Z"
     },
     "papermill": {
-     "duration": 0.008072,
-     "end_time": "2024-07-30T15:39:31.614270",
+     "duration": 0.00779,
+     "end_time": "2024-07-08T02:55:44.039390",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.606198",
+     "start_time": "2024-07-08T02:55:44.031600",
      "status": "completed"
     },
     "tags": []
@@ -172,10 +172,10 @@
    "id": "732a5a55",
    "metadata": {
     "papermill": {
-     "duration": 0.002175,
-     "end_time": "2024-07-30T15:39:31.618643",
+     "duration": 0.00263,
+     "end_time": "2024-07-08T02:55:44.044890",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.616468",
+     "start_time": "2024-07-08T02:55:44.042260",
      "status": "completed"
     },
     "tags": []
@@ -191,10 +191,10 @@
    "id": "1d5bf441",
    "metadata": {
     "papermill": {
-     "duration": 0.002208,
-     "end_time": "2024-07-30T15:39:31.622850",
+     "duration": 0.002598,
+     "end_time": "2024-07-08T02:55:44.050082",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.620642",
+     "start_time": "2024-07-08T02:55:44.047484",
      "status": "completed"
     },
     "tags": []
@@ -209,16 +209,16 @@
    "id": "831e9f22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:31.629078Z",
-     "iopub.status.busy": "2024-07-30T15:39:31.628860Z",
-     "iopub.status.idle": "2024-07-30T15:39:34.874296Z",
-     "shell.execute_reply": "2024-07-30T15:39:34.873635Z"
+     "iopub.execute_input": "2024-07-08T02:55:44.055962Z",
+     "iopub.status.busy": "2024-07-08T02:55:44.055746Z",
+     "iopub.status.idle": "2024-07-08T02:55:47.590795Z",
+     "shell.execute_reply": "2024-07-08T02:55:47.589997Z"
     },
     "papermill": {
-     "duration": 3.250391,
-     "end_time": "2024-07-30T15:39:34.876066",
+     "duration": 3.540057,
+     "end_time": "2024-07-08T02:55:47.592575",
      "exception": false,
-     "start_time": "2024-07-30T15:39:31.625675",
+     "start_time": "2024-07-08T02:55:44.052518",
      "status": "completed"
     },
     "tags": []
@@ -240,10 +240,10 @@
    "id": "bbbd06d1",
    "metadata": {
     "papermill": {
-     "duration": 0.002724,
-     "end_time": "2024-07-30T15:39:34.881552",
+     "duration": 0.002728,
+     "end_time": "2024-07-08T02:55:47.599073",
      "exception": false,
-     "start_time": "2024-07-30T15:39:34.878828",
+     "start_time": "2024-07-08T02:55:47.596345",
      "status": "completed"
     },
     "tags": []
@@ -258,16 +258,16 @@
    "id": "0ebbda50",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:34.887937Z",
-     "iopub.status.busy": "2024-07-30T15:39:34.887536Z",
-     "iopub.status.idle": "2024-07-30T15:39:34.891995Z",
-     "shell.execute_reply": "2024-07-30T15:39:34.891504Z"
+     "iopub.execute_input": "2024-07-08T02:55:47.605649Z",
+     "iopub.status.busy": "2024-07-08T02:55:47.605248Z",
+     "iopub.status.idle": "2024-07-08T02:55:47.610364Z",
+     "shell.execute_reply": "2024-07-08T02:55:47.609751Z"
     },
     "papermill": {
-     "duration": 0.009318,
-     "end_time": "2024-07-30T15:39:34.893536",
+     "duration": 0.010194,
+     "end_time": "2024-07-08T02:55:47.611915",
      "exception": false,
-     "start_time": "2024-07-30T15:39:34.884218",
+     "start_time": "2024-07-08T02:55:47.601721",
      "status": "completed"
     },
     "tags": []
@@ -276,6 +276,7 @@
    "source": [
     "data_filename = os.path.join(data_dir, \"grid_data.csv\")\n",
     "\n",
+    "outputs_dir = \"outputs_feature_agglomeration\"\n",
     "dist_parametric_filename = os.path.join(\n",
     "    outputs_dir,\n",
     "    \"global\",\n",
@@ -309,10 +310,10 @@
    "id": "1782b6b5",
    "metadata": {
     "papermill": {
-     "duration": 0.002663,
-     "end_time": "2024-07-30T15:39:34.898714",
+     "duration": 0.002664,
+     "end_time": "2024-07-08T02:55:47.617276",
      "exception": false,
-     "start_time": "2024-07-30T15:39:34.896051",
+     "start_time": "2024-07-08T02:55:47.614612",
      "status": "completed"
     },
     "tags": []
@@ -329,16 +330,16 @@
    "id": "210df0fc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:34.904792Z",
-     "iopub.status.busy": "2024-07-30T15:39:34.904561Z",
-     "iopub.status.idle": "2024-07-30T15:39:59.795554Z",
-     "shell.execute_reply": "2024-07-30T15:39:59.794964Z"
+     "iopub.execute_input": "2024-07-08T02:55:47.623646Z",
+     "iopub.status.busy": "2024-07-08T02:55:47.623251Z",
+     "iopub.status.idle": "2024-07-08T02:56:16.261835Z",
+     "shell.execute_reply": "2024-07-08T02:56:16.261267Z"
     },
     "papermill": {
-     "duration": 24.895848,
-     "end_time": "2024-07-30T15:39:59.797161",
+     "duration": 28.64378,
+     "end_time": "2024-07-08T02:56:16.263558",
      "exception": false,
-     "start_time": "2024-07-30T15:39:34.901313",
+     "start_time": "2024-07-08T02:55:47.619778",
      "status": "completed"
     },
     "tags": []
@@ -364,10 +365,10 @@
    "id": "a27d57a0",
    "metadata": {
     "papermill": {
-     "duration": 0.003169,
-     "end_time": "2024-07-30T15:39:59.804866",
+     "duration": 0.002584,
+     "end_time": "2024-07-08T02:56:16.269160",
      "exception": false,
-     "start_time": "2024-07-30T15:39:59.801697",
+     "start_time": "2024-07-08T02:56:16.266576",
      "status": "completed"
     },
     "tags": []
@@ -383,10 +384,10 @@
    "id": "4fafad82",
    "metadata": {
     "papermill": {
-     "duration": 0.002581,
-     "end_time": "2024-07-30T15:39:59.810022",
+     "duration": 0.002622,
+     "end_time": "2024-07-08T02:56:16.274349",
      "exception": false,
-     "start_time": "2024-07-30T15:39:59.807441",
+     "start_time": "2024-07-08T02:56:16.271727",
      "status": "completed"
     },
     "tags": []
@@ -401,16 +402,16 @@
    "id": "bf0773e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:39:59.816294Z",
-     "iopub.status.busy": "2024-07-30T15:39:59.815954Z",
-     "iopub.status.idle": "2024-07-30T15:53:42.373079Z",
-     "shell.execute_reply": "2024-07-30T15:53:42.372318Z"
+     "iopub.execute_input": "2024-07-08T02:56:16.280735Z",
+     "iopub.status.busy": "2024-07-08T02:56:16.280479Z",
+     "iopub.status.idle": "2024-07-08T03:07:54.725719Z",
+     "shell.execute_reply": "2024-07-08T03:07:54.724994Z"
     },
     "papermill": {
-     "duration": 822.562391,
-     "end_time": "2024-07-30T15:53:42.374882",
+     "duration": 698.450678,
+     "end_time": "2024-07-08T03:07:54.727510",
      "exception": false,
-     "start_time": "2024-07-30T15:39:59.812491",
+     "start_time": "2024-07-08T02:56:16.276832",
      "status": "completed"
     },
     "tags": []
@@ -433,10 +434,10 @@
    "id": "eead1583",
    "metadata": {
     "papermill": {
-     "duration": 0.002124,
-     "end_time": "2024-07-30T15:53:42.379454",
+     "duration": 0.003001,
+     "end_time": "2024-07-08T03:07:54.733363",
      "exception": false,
-     "start_time": "2024-07-30T15:53:42.377330",
+     "start_time": "2024-07-08T03:07:54.730362",
      "status": "completed"
     },
     "tags": []
@@ -451,16 +452,16 @@
    "id": "649c16f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-30T15:53:42.384927Z",
-     "iopub.status.busy": "2024-07-30T15:53:42.384659Z",
-     "iopub.status.idle": "2024-07-30T15:53:46.229454Z",
-     "shell.execute_reply": "2024-07-30T15:53:46.228832Z"
+     "iopub.execute_input": "2024-07-08T03:07:54.740286Z",
+     "iopub.status.busy": "2024-07-08T03:07:54.739964Z",
+     "iopub.status.idle": "2024-07-08T03:07:59.176480Z",
+     "shell.execute_reply": "2024-07-08T03:07:59.175845Z"
     },
     "papermill": {
-     "duration": 3.849465,
-     "end_time": "2024-07-30T15:53:46.230979",
+     "duration": 4.442013,
+     "end_time": "2024-07-08T03:07:59.178131",
      "exception": false,
-     "start_time": "2024-07-30T15:53:42.381514",
+     "start_time": "2024-07-08T03:07:54.736118",
      "status": "completed"
     },
     "tags": []
@@ -501,10 +502,10 @@
    "id": "c1bb8653",
    "metadata": {
     "papermill": {
-     "duration": 0.005344,
-     "end_time": "2024-07-30T15:53:46.240348",
+     "duration": 0.002974,
+     "end_time": "2024-07-08T03:07:59.184356",
      "exception": false,
-     "start_time": "2024-07-30T15:53:46.235004",
+     "start_time": "2024-07-08T03:07:59.181382",
      "status": "completed"
     },
     "tags": []
@@ -533,14 +534,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 858.029614,
-   "end_time": "2024-07-30T15:53:48.870724",
+   "duration": 738.739548,
+   "end_time": "2024-07-08T03:08:01.905806",
    "environment_variables": {},
    "exception": null,
-   "input_path": "05-create_preservation_maps_selection.ipynb",
-   "output_path": "05-create_preservation_maps_selection.ipynb",
+   "input_path": "05-create_preservation_maps.ipynb",
+   "output_path": "05-create_preservation_maps.ipynb",
    "parameters": {},
-   "start_time": "2024-07-30T15:39:30.841110",
+   "start_time": "2024-07-08T02:55:43.166258",
    "version": "2.4.0"
   }
  },
